--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "antd": "^5.25.1",
     "axios": "^1.9.0",
     "lodash": "^4.17.21",
-    "next": "15.3.2",
+    "next": "^15.3.2",
     "next-transpile-modules": "^10.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
